# promptforge

./: .gitignore  LICENSE  README.md
.github/workflows/: api.yml  ragent.yml  web.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260523_0001_initial_auth_tables.py  20260525_0002_api_keys_and_refresh_tokens.py  20260525_0003_prompts_and_versions.py  20260529_0004_jobs_table.py  20260529_0005_runs_table.py  20260601_0006_eval_tables.py  20260601_0007_demo_usage.py  20260602_0008_share_tokens.py  20260605_0009_ragent_corpora.py  20260605_0010_document_raw_content.py  20260608_0011_ragent_demo_usage.py
apps/api/promptforge_api/: __init__.py  main.py  seed.py
apps/api/promptforge_api/api/v1/: __init__.py  auth.py  demo.py  evals.py  prompts.py  runs.py  share.py  versions.py
apps/api/promptforge_api/core/: async_utils.py  config.py  db.py  deps.py  logging.py  prompts.py  queue.py  ratelimit.py  security.py
apps/api/promptforge_api/models/: __init__.py  api_key.py  base.py  demo_usage.py  eval.py  job.py  org.py  prompt.py  refresh_token.py  run.py  share_token.py  user.py
apps/api/promptforge_api/repositories/: __init__.py  base.py
apps/api/promptforge_api/schemas/: auth.py  demo.py  eval.py  prompt.py  run.py  share.py
apps/api/promptforge_api/services/: demo.py  eval_runner.py  judge.py  llm.py  maintenance.py
apps/api/promptforge_api/workers/: eval_worker.py
apps/api/tests/: conftest.py
apps/api/tests/e2e/: conftest.py  test_auth_failure_paths.py  test_auth_flow.py  test_demo_flow.py  test_evals_flow.py  test_observability.py  test_prompts_flow.py  test_runs_flow.py  test_seed_flow.py  test_share_flow.py
apps/api/tests/integration/: test_auth_models.py  test_maintenance.py  test_models.py  test_prompt_models.py  test_queue.py  test_run_model.py  test_seed.py  test_tenant_repository.py
apps/api/tests/tenancy/: _helpers.py  test_api_keys_tenancy.py  test_prompts_tenancy.py  test_shares_tenancy.py
apps/api/tests/unit/: test_async_utils.py  test_health.py  test_judge.py  test_llm.py  test_main.py  test_prompts_template.py  test_security.py
apps/ragent/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
apps/ragent/promptforge_ragent/: __init__.py  main.py  seed.py  seed_data.py
apps/ragent/promptforge_ragent/agent/: loop.py  tools.py
apps/ragent/promptforge_ragent/api/v1/: __init__.py  chat.py  corpora.py
apps/ragent/promptforge_ragent/core/: config.py  db.py  deps.py  logging.py  queue.py  security.py
apps/ragent/promptforge_ragent/models/: __init__.py  _external.py  base.py  chunk.py  conversation.py  corpus.py  demo_usage.py  document.py  message.py
apps/ragent/promptforge_ragent/services/: chunking.py  demo_quota.py  embeddings.py  ingest.py  parsing.py  platform.py  rerank.py  retrieval.py  system_prompt.py
apps/ragent/promptforge_ragent/workers/: ingest_worker.py
apps/ragent/tests/: conftest.py
apps/ragent/tests/e2e/: test_chat.py  test_chat_quota.py  test_corpora.py
apps/ragent/tests/integration/: test_agent_loop.py  test_agent_tools.py  test_ingest.py  test_ingest_worker.py  test_models.py  test_platform.py  test_queue.py  test_retrieval.py  test_seed.py
apps/ragent/tests/unit/: test_agent_loop.py  test_agent_tools.py  test_auth.py  test_chunking.py  test_corpora_helpers.py  test_embeddings.py  test_health.py  test_parsing.py  test_rerank.py  test_retrieval.py  test_system_prompt.py
apps/web/: .env.example  README.md  instrumentation.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/(app)/chat/: page.tsx
apps/web/app/(app)/corpora/: page.tsx
apps/web/app/(app)/corpora/[id]/: page.tsx
apps/web/app/(app)/corpora/new/: page.tsx
apps/web/app/(app)/dashboard/: page.tsx
apps/web/app/(app)/evals/: page.tsx
apps/web/app/(app)/evals/[id]/: page.tsx
apps/web/app/(app)/evals/batches/[id]/: page.tsx
apps/web/app/(app)/evals/new/: page.tsx
apps/web/app/(app)/prompts/: page.tsx
apps/web/app/(app)/prompts/[id]/: page.tsx
apps/web/app/(app)/prompts/new/: page.tsx
apps/web/app/(app)/settings/: page.tsx
apps/web/app/(auth)/login/: page.tsx
apps/web/app/(auth)/signup/: page.tsx
apps/web/app/api/auth/demo/: route.ts
apps/web/app/api/auth/login/: route.ts
apps/web/app/api/auth/logout/: route.ts
apps/web/app/api/auth/signup/: route.ts
apps/web/app/api/byok/: route.ts
apps/web/app/api/pf-ragent-chat/: route.ts
apps/web/app/api/pf-ragent-upload/[corpusId]/: route.ts
apps/web/app/api/pf-ragent/[...path]/: route.ts
apps/web/app/api/pf-stream/[...path]/: route.ts
apps/web/app/api/pf/[...path]/: route.ts
apps/web/app/share/[token]/: page.tsx
apps/web/components/: code-editor.tsx  form.tsx  try-demo-button.tsx
apps/web/components/app-shell/: placeholder.tsx  sidebar.tsx  topbar.tsx
apps/web/components/prompts/: variables-editor.tsx
apps/web/components/settings/: api-keys-section.tsx  byok-section.tsx
apps/web/components/ui/: skeleton.tsx
apps/web/e2e/: auth.spec.ts  chat.spec.ts  evals.spec.ts  helpers.ts  landing.spec.ts  prompts.spec.ts  share.spec.ts
apps/web/e2e/mocks/: handlers.ts  node.ts
apps/web/lib/: auth-context.tsx  byok.ts  seal.ts  session.ts  site.ts  types.ts
apps/web/lib/api/: client.ts  config.ts  models.ts  schema.ts  server.ts  sse.ts
docs/: ARCHITECTURE.md  DECISIONS.md  DEPLOY-RAGENT.md  DEPLOY-WEB.md  DEPLOY.md  GUIDE.md  INTERVIEW-NOTES.md  PROGRESS.md
infra/: compose.yml
