[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptforge-api"
version = "0.1.0"
description = "PromptForge backend — multi-tenant LLM prompt management & evaluation platform"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Jake Werbin" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23.1",
    "litellm>=1.40",
    "httpx>=0.27",
    "structlog>=24.1",
    "slowapi>=0.1.9",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "testcontainers[postgres]>=4",
    "hypothesis>=6",
    "syrupy>=4",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-python-jose",
    "freezegun>=1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["promptforge_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "I", "B", "UP", "S", "A", "C4", "T20", "SIM", "RUF",
    "ASYNC", "PT", "RET",
]
ignore = [
    "S101",  # assert in tests is fine
    "B008",  # FastAPI Depends() pattern
    # TCH/TC* rules are disabled because FastAPI/pytest read annotations at
    # runtime; moving imports into TYPE_CHECKING blocks breaks dep resolution.
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "S107"]  # passwords/secrets in fixtures fine
"promptforge_api/schemas/**" = ["S105"]  # "bearer" literal in token_type fields

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]
mypy_path = "."
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["litellm.*", "argon2.*", "jose.*", "slowapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --strict-config -ra"
markers = [
    "integration: marks tests requiring real Postgres (deselect with -m 'not integration')",
    "e2e: marks full HTTP-flow tests",
]

[tool.coverage.run]
source = ["promptforge_api"]
branch = true
omit = ["promptforge_api/workers/*"]

[tool.coverage.report]
precision = 1
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
